fix bugs: Task Card, Task view of logged in user, swagger doc update and update dockerize app.
